# CMakeList.txt : CMake project for LeetCode, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)


# Add source to this project's executable.
add_executable (LeetCode "LeetCode.cpp" "LeetCode.h" "Algorithms/MaxSubarray.cpp" "Algorithms/Algorithms.h" "Algorithms/Tests.cpp" "Algorithms/BinarySearch.cpp" "Algorithms/TwoSum.cpp" "Algorithms/BestTimeToBuyAndSellStock.cpp" "Algorithms/ContainsDuplicate.cpp" "Algorithms/MaximumProductSubarray.cpp" "Algorithms/FindMinimumInRotatedSortedArray.cpp" "Algorithms/ThreeSum.cpp" "Algorithms/ContainerWithMostWater.cpp" "DataStructures/Lists/ReverseLinkedList.cpp" "DataStructures/Lists/ListNode.h" "DataStructures/Lists/Functions.h" "DataStructures/Lists/Tests.cpp" "DataStructures/Lists/LinkedListCycle.cpp" "DataStructures/Lists/MergeTwoSortedLists.cpp" "DataStructures/Lists/MergeKSortedLists.cpp" "DataStructures/Lists/RemoveNthNodeFromEndOfList.cpp" "DataStructures/Lists/ReorderList.cpp")

# TODO: Add tests and install targets if needed.
